@@ -789,19 +789,20 @@ NON-PORTABLE SYSTEM SERVICES
 ==============================================================
 */
 
-void	Sys_Init (void);
+void	Sys_Init(void);
 
-void	Sys_AppActivate (void);
+void	Sys_AppActivate(void);
 
-void	Sys_UnloadGame (void);
-void	*Sys_GetGameAPI (void *parms);
+void	Sys_UnloadGame(void);
+void	*Sys_GetGameAPI(void *parms);
 // loads the game dll and calls the api init function
 
-char	*Sys_ConsoleInput (void);
-void	Sys_ConsoleOutput (char *string);
-void	Sys_SendKeyEvents (void);
-void	Sys_Error (char *error, ...);
-void	Sys_Quit (void);
+char	*Sys_ConsoleInput(void);
+void	Sys_ConsoleOutput(char *string);
+void	Sys_SendKeyEvents(void);
+void	Sys_Error(char* error, ...);
+void	Sys_Msgbox(char* title, uint32_t buttons, char* text, ...);
+void	Sys_Quit(void);
 char	*Sys_GetClipboardData( void );
 
 /*
