@@ -278,10 +278,6 @@ void GL_BeginFrame()
 */
 void GL_EndFrame(void)
 {
-	if (gl_state.window == NULL)
-	{
-		return;
-	}
 
 	int		err;
 
@@ -294,6 +290,12 @@ void GL_EndFrame(void)
 	{
 		// swap the buffers
 		glfwSwapBuffers(gl_state.window);
+	}
+
+	// if the window closed exit
+	if (gl_state.window == NULL)
+	{
+		return;
 	}
 }
 
